# lightsd

./: .hgignore  .hgtags  .ycm_extra_conf.py  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CTestCustom.cmake.in  README.rst
core/: CMakeLists.txt  broadcast.c  broadcast.h  bulb.c  bulb.h  client.c  client.h  console.c  console.h  daemon.c  daemon.h  discovery.c  discovery.h  gateway.c  gateway.h  jsmn.c  jsmn.h  jsonrpc.c  jsonrpc.h  lifxd.c  lifxd.h  lightsd.c  lightsd.h  listen.c  listen.h  log.c  pipe.c  pipe.h  proto.c  proto.h  router.c  router.h  setproctitle.c  stats.c  stats.h  time_monotonic.h  timer.c  timer.h  utils.c  version.h.in  (+2 more)
tests/: CMakeLists.txt  lightsc
tests/compat/time_monotonic/: CMakeLists.txt  test_time_monotonic_msecs.c
tests/core/: CMakeLists.txt  mock_client_buf.h  mock_daemon.h  mock_event2.h  mock_jsonrpc.h  mock_log.h  mock_proto.h  mock_router.h  mock_timer.h  tests_shims.c  tests_shims.h  tests_utils.c  tests_utils.h  utils.c
tests/core/client/: CMakeLists.txt  test_client_read_callback.c  test_client_read_callback_extra_data.c  test_client_read_callback_multiple_requests.c  test_client_read_callback_part_too_large.c  test_client_read_callback_yield_on_eagain.c  tests_client_utils.h
tests/core/daemon/: CMakeLists.txt  mock_pipe.h  test_daemon_randuint32.c  test_daemon_update_proctitle.c  test_daemon_writepidfile.c
tests/core/jsonrpc/: CMakeLists.txt  test_jsonrpc_batch.c  test_jsonrpc_batch_notifications_only.c  test_jsonrpc_batch_one_invalid_request.c  test_jsonrpc_batch_one_notification.c  test_jsonrpc_build_target_list.c  test_jsonrpc_check_and_call_power_off.c  test_jsonrpc_check_and_call_power_off_missing_target.c  test_jsonrpc_check_and_call_power_on.c  test_jsonrpc_check_and_call_power_on_missing_target.c  test_jsonrpc_check_and_call_power_toggle.c  test_jsonrpc_check_and_call_set_label.c  test_jsonrpc_check_and_call_set_light_from_hsbk.c  test_jsonrpc_check_and_call_set_light_from_hsbk_from_array.c  test_jsonrpc_check_and_call_set_light_from_hsbk_invalid_params.c  test_jsonrpc_check_and_call_set_waveform.c  test_jsonrpc_check_and_call_set_waveform_invalid_params.c  test_jsonrpc_check_and_call_tag.c  test_jsonrpc_check_and_call_tag_missing_params.c  test_jsonrpc_check_and_call_untag.c  test_jsonrpc_check_and_call_untag_invalid_params.c  test_jsonrpc_consume_object_or_array.c  test_jsonrpc_dispatch_one_no_params.c  test_jsonrpc_extract_request_no_params.c  test_jsonrpc_extract_request_notification_no_params.c  test_jsonrpc_extract_request_params_array.c  test_jsonrpc_extract_request_params_obj.c  test_jsonrpc_extract_request_valid_notification.c  test_jsonrpc_extract_values_from_schema_and_array_honors_objsize.c  test_jsonrpc_send_error.c  test_jsonrpc_send_response.c  test_jsonrpc_type_float_between_0_and_1_invalid.c  test_jsonrpc_type_float_between_0_and_1_valid.c  test_jsonrpc_type_float_between_0_and_360_invalid.c  test_jsonrpc_type_float_between_0_and_360_valid.c  test_jsonrpc_type_integer.c  test_jsonrpc_type_integer_invalid_characters.c  test_jsonrpc_type_integer_too_big.c  test_jsonrpc_type_integer_too_small.c  test_jsonrpc_uint16_range_to_float_string.c  (+1 more)
tests/core/pipe/: CMakeLists.txt  test_pipe_close.c  test_pipe_open.c  test_pipe_open_fifo_already_exists.c  test_pipe_read_callback.c  test_pipe_read_callback_extra_data.c  test_pipe_read_callback_multiple_requests.c  test_pipe_read_callback_yield_on_eagain.c  tests_pipe_utils.h
tests/core/proto/: CMakeLists.txt  test_proto_get_light_state.c  test_proto_get_light_state_empty_device_list.c  test_proto_get_light_state_label_overflow.c  test_proto_get_light_state_null_device_list.c  test_proto_get_light_state_unknown_tag_id.c  test_proto_list_tags.c  test_proto_power_off.c  test_proto_power_off_routing_error.c  test_proto_power_on.c  test_proto_power_on_routing_error.c  test_proto_power_toggle.c  test_proto_power_toggle_targets_to_device_fails.c  test_proto_set_label.c  test_proto_set_label_too_long.c  test_proto_set_light_from_hsbk.c  test_proto_set_light_from_hsbk_on_routing_error.c  test_proto_set_waveform.c  test_proto_set_waveform_on_routing_error.c  test_proto_tag_create.c  test_proto_tag_create_lifx_gw_tag_ids_full.c  test_proto_tag_update.c  test_proto_toggle.c  test_proto_untag.c  test_proto_untag_tag_does_not_exist.c  tests_proto_utils.h
tests/core/router/: CMakeLists.txt  test_router_broadcast.c  test_router_device.c  test_router_invalid_targets.c  test_router_send_to_broadcast.c  test_router_send_to_device.c  test_router_send_to_invalid_targets.c  test_router_send_to_label.c  test_router_send_to_tag.c  test_router_targets_to_devices.c  tests_router_utils.h
tests/core/timer/: CMakeLists.txt  test_timer_ispending.c  test_timer_reschedule.c  test_timer_start_activate_now.c  test_timer_start_persistent.c
tests/lifx/: CMakeLists.txt  mock_bulb.h  mock_gateway.h  mock_tagging.h  mock_wire_proto.h  tests_shims.c
tests/lifx/broadcast/: CMakeLists.txt  test_broadcast_send_packet.c  test_broadcast_write_callback.c  test_broadcast_write_callback_getifaddrs_fails.c
tests/lifx/bulb/: CMakeLists.txt  test_bulb_close.c  test_bulb_fetch_hardware_info.c  test_bulb_has_label.c  test_bulb_open.c  test_bulb_set_light_state.c  test_bulb_set_power_state.c  test_bulb_set_tags.c
tests/lifx/gateway/: CMakeLists.txt  test_gateway_allocate_tag_id.c  test_gateway_allocate_tag_id_from_lifx_network.c  test_gateway_allocate_tag_id_no_tag_id_left.c  test_gateway_deallocate_tag_id_from_lifx_network.c  test_gateway_enqueue_packet.c  test_gateway_enqueue_packet_ring_full.c  test_gateway_enqueue_packet_ring_wraparound.c  test_gateway_handle_ambient_light.c  test_gateway_handle_bulb_label.c  test_gateway_handle_ip_firmware_info.c  test_gateway_handle_ip_state.c  test_gateway_handle_product_info.c  test_gateway_handle_runtime_info.c  test_gateway_handle_tag_labels.c  test_gateway_handle_tags.c  test_gateway_update_tag_refcounts.c  test_gateway_utils.h  test_gateway_write_callback.c  test_gateway_write_callback_clears_ring_full_flag.c  test_gateway_write_callback_partial_write.c  (+2 more)
(+110 files in other folders)
