FUNCTION(ADD_CORE_LIBRARY LIBNAME)
    ADD_LIBRARY(${LIBNAME} ${ARGN})
    TARGET_LINK_LIBRARIES(${LIBNAME} ${TIME_MONOTONIC_LIBRARY})
    TARGET_INCLUDE_DIRECTORIES(
        ${LIBNAME} PUBLIC
        ${LIGHTSD_SOURCE_DIR}/core/
        ${LIGHTSD_BINARY_DIR}/core/
    )
ENDFUNCTION()

ADD_ALL_SUBDIRECTORIES()
