INCLUDE_DIRECTORIES(
    ${LIGHTSD_SOURCE_DIR}
    ${LIGHTSD_SOURCE_DIR}/core/
    ${LIGHTSD_BINARY_DIR}
    ${LIGHTSD_BINARY_DIR}/core/
)

ADD_LIBRARY(
    test_core_jsonrpc STATIC
    ${LIGHTSD_SOURCE_DIR}/core/jsmn.c
    ${LIGHTSD_SOURCE_DIR}/core/log.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../utils.c
)

FUNCTION(ADD_JSONRPC_TEST TEST_SOURCE)
    ADD_TEST_FROM_C_SOURCES(${TEST_SOURCE} test_core_jsonrpc)
ENDFUNCTION()

FILE(GLOB TESTS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "test_*.c")
FOREACH(TEST ${TESTS})
    ADD_JSONRPC_TEST(${TEST})
ENDFOREACH()
