INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_LIBRARY(
    test_core_jsonrpc STATIC
    ${LIGHTSD_SOURCE_DIR}/core/jsmn.c
    ${LIGHTSD_SOURCE_DIR}/core/log.c
    ${LIGHTSD_SOURCE_DIR}/lifx/wire_proto.c
    ${LIGHTSD_SOURCE_DIR}/lifx/bulb.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../tests_shims.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../tests_utils.c
)
TARGET_LINK_LIBRARIES(test_core_jsonrpc ${TIME_MONOTONIC_LIBRARY})

FUNCTION(ADD_JSONRPC_TEST TEST_SOURCE)
    ADD_TEST_FROM_C_SOURCES(${TEST_SOURCE} test_core_jsonrpc)
ENDFUNCTION()

FILE(GLOB TESTS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "test_*.c")
FOREACH(TEST ${TESTS})
    ADD_JSONRPC_TEST(${TEST})
ENDFOREACH()
