INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_LIBRARY(
    test_core_proto STATIC
    ${LIGHTSD_SOURCE_DIR}/core/log.c
    ${LIGHTSD_SOURCE_DIR}/lifx/bulb.c
    ${LIGHTSD_SOURCE_DIR}/lifx/timer.c
    ${LIGHTSD_SOURCE_DIR}/lifx/wire_proto.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../tests_shims.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../tests_utils.c
    ${TIME_MONOTONIC_IMPL}
)

TARGET_LINK_LIBRARIES(test_core_proto ${EVENT2_CORE_LIBRARY})

FUNCTION(ADD_ROUTER_TEST TEST_SOURCE)
    ADD_TEST_FROM_C_SOURCES(${TEST_SOURCE} test_core_proto)
ENDFUNCTION()

FILE(GLOB TESTS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "test_*.c")
FOREACH(TEST ${TESTS})
    ADD_ROUTER_TEST(${TEST})
ENDFOREACH()
