INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_LIBRARY(
    test_lifx_tagging STATIC
    ${LIGHTSD_SOURCE_DIR}/core/log.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../tests_shims.c
)

FUNCTION(ADD_TAGGING_TEST TEST_SOURCE)
    ADD_TEST_FROM_C_SOURCES(${TEST_SOURCE} test_lifx_tagging)
ENDFUNCTION()

FILE(GLOB TESTS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "test_*.c")
FOREACH(TEST ${TESTS})
    ADD_TAGGING_TEST(${TEST})
ENDFOREACH()
